--- a/config/sync/editor.editor.basic_html.yml
+++ b/config/sync/editor.editor.basic_html.yml
@@ -36,8 +36,7 @@ settings:
         -
           name: Media
           items:
-            - media
-            - document
+            - DrupalMediaLibrary
         -
           name: Miscellaneous
           items:
