--- a/config/sync/field.field.media.image.field_caption.yml
+++ b/config/sync/field.field.media.image.field_caption.yml
@@ -10,7 +10,7 @@ field_name: field_caption
 entity_type: media
 bundle: image
 label: Caption
-description: ''
+description: '<strong>NOTE:</strong> Captions may not be displayed in all places this media is used.'
 required: false
 translatable: false
 default_value: {  }
