--- a/config/sync/user.role.editor.yml
+++ b/config/sync/user.role.editor.yml
@@ -62,8 +62,8 @@ permissions:
   - 'create paragraph content tile_image'
   - 'create paragraph content video'
   - 'create profiles content'
+  - 'create remote_video media'
   - 'create url aliases'
-  - 'create video media'
   - 'create webform'
   - 'delete any blog content'
   - 'delete any event content'
@@ -84,7 +84,7 @@ permissions:
   - 'delete own news content'
   - 'delete own page content'
   - 'delete own profiles content'
-  - 'delete own video media'
+  - 'delete own remote_video media'
   - 'delete own webform'
   - 'delete own webform submission'
   - 'delete page revisions'
@@ -123,7 +123,7 @@ permissions:
   - 'edit any news content'
   - 'edit any page content'
   - 'edit any profiles content'
-  - 'edit any video media'
+  - 'edit any remote_video media'
   - 'edit any webform'
   - 'edit own blog content'
   - 'edit own comments'
@@ -134,7 +134,7 @@ permissions:
   - 'edit own news content'
   - 'edit own page content'
   - 'edit own profiles content'
-  - 'edit own video media'
+  - 'edit own remote_video media'
   - 'edit own webform submission'
   - 'edit terms in position'
   - 'post comments'
