--- a/config/sync/core.entity_view_display.media.video.default.yml
+++ b/config/sync/core.entity_view_display.media.video.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.media.video.field_media_categories
+    - field.field.media.video.field_media_video
     - field.field.media.video.field_media_video_embed_field
     - media.type.video
   module:
@@ -21,6 +22,17 @@ targetEntityType: media
 bundle: video
 mode: default
 content:
+  field_media_video:
+    weight: 1
+    label: above
+    settings:
+      responsive: true
+      width: 854
+      height: 480
+      autoplay: true
+    third_party_settings: {  }
+    type: video_embed_field_video
+    region: content
   field_media_video_embed_field:
     type: video_embed_field_video
     weight: 0
@@ -36,5 +48,6 @@ hidden:
   created: true
   field_media_categories: true
   name: true
+  search_api_excerpt: true
   thumbnail: true
   uid: true
