--- a/config/sync/core.entity_view_display.media.video.full.yml
+++ b/config/sync/core.entity_view_display.media.video.full.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.media.full
     - field.field.media.video.field_media_categories
+    - field.field.media.video.field_media_video
     - field.field.media.video.field_media_video_embed_field
     - media.type.video
   module:
@@ -36,6 +37,8 @@ content:
 hidden:
   created: true
   field_media_categories: true
+  field_media_video: true
   name: true
+  search_api_excerpt: true
   thumbnail: true
   uid: true
