--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -63,6 +63,7 @@ module:
   media: 0
   media_entity_actions: 0
   media_entity_generic: 0
+  media_library: 0
   menu_block: 0
   menu_ui: 0
   metatag: 0
