--- a/config/sync/user.role.site_manager.yml
+++ b/config/sync/user.role.site_manager.yml
@@ -55,11 +55,11 @@ permissions:
   - 'create paragraph content text'
   - 'create paragraph content video'
   - 'create profiles content'
+  - 'create remote_video media'
   - 'create terms in categories'
   - 'create terms in media_categories'
   - 'create terms in tags'
   - 'create url aliases'
-  - 'create video media'
   - 'create webform'
   - 'customize shortcut links'
   - 'delete all revisions'
@@ -72,7 +72,7 @@ permissions:
   - 'delete any news content'
   - 'delete any page content'
   - 'delete any profiles content'
-  - 'delete any video media'
+  - 'delete any remote_video media'
   - 'delete any webform'
   - 'delete any webform submission'
   - 'delete blog revisions'
@@ -88,7 +88,7 @@ permissions:
   - 'delete own news content'
   - 'delete own page content'
   - 'delete own profiles content'
-  - 'delete own video media'
+  - 'delete own remote_video media'
   - 'delete own webform'
   - 'delete own webform submission'
   - 'delete page revisions'
@@ -117,7 +117,7 @@ permissions:
   - 'edit any news content'
   - 'edit any page content'
   - 'edit any profiles content'
-  - 'edit any video media'
+  - 'edit any remote_video media'
   - 'edit any webform'
   - 'edit any webform submission'
   - 'edit own blog content'
@@ -128,7 +128,7 @@ permissions:
   - 'edit own news content'
   - 'edit own page content'
   - 'edit own profiles content'
-  - 'edit own video media'
+  - 'edit own remote_video media'
   - 'edit own webform'
   - 'edit own webform submission'
   - 'edit terms in categories'
