Fix media library theming, media library thumbnails and pager

--- a/config/sync/filter.format.basic_html.yml
+++ b/config/sync/filter.format.basic_html.yml
@@ -110,7 +110,7 @@ filters:
       allowed_media_types:
         document: document
         image: image
-        video: video
+        remote_video: remote_video
       allowed_view_modes:
         full: full
         large_embed: large_embed
