--- a/config/sync/core.entity_form_display.node.blog.default.yml
+++ b/config/sync/core.entity_form_display.node.blog.default.yml
@@ -3,7 +3,6 @@ langcode: en
 status: true
 dependencies:
   config:
-    - core.entity_form_mode.media.background_image
     - field.field.node.blog.body
     - field.field.node.blog.field_author
     - field.field.node.blog.field_banner
@@ -12,7 +11,7 @@ dependencies:
     - node.type.blog
   module:
     - entity_browser_entity_form
-    - inline_entity_form
+    - media_library
     - metatag
     - text
 _core:
@@ -41,24 +40,16 @@ content:
   field_banner:
     weight: 3
     settings:
-      form_mode: background_image
-      label_singular: ''
-      label_plural: ''
-      allow_new: true
-      allow_existing: true
-      match_operator: CONTAINS
-      override_labels: false
-      collapsible: false
-      collapsed: false
-      allow_duplicate: false
+      media_types: {  }
     third_party_settings:
       entity_browser_entity_form:
         entity_browser_id: image_browser
-    type: inline_entity_form_complex
+    type: media_library_widget
     region: content
   field_metatags:
     weight: 5
-    settings: {  }
+    settings:
+      sidebar: true
     third_party_settings: {  }
     type: metatag_firehose
     region: content
