--- a/config/sync/core.entity_form_display.node.page.default.yml
+++ b/config/sync/core.entity_form_display.node.page.default.yml
@@ -3,7 +3,6 @@ langcode: en
 status: true
 dependencies:
   config:
-    - core.entity_form_mode.media.background_image
     - field.field.node.page.body
     - field.field.node.page.field_banner
     - field.field.node.page.field_metatags
@@ -11,7 +10,7 @@ dependencies:
     - node.type.page
   module:
     - entity_browser_entity_form
-    - inline_entity_form
+    - media_library
     - metatag
     - paragraphs
     - text
@@ -33,26 +32,18 @@ content:
     third_party_settings: {  }
     region: content
   field_banner:
-    type: inline_entity_form_complex
+    type: media_library_widget
     weight: 1
     settings:
-      form_mode: background_image
-      label_singular: ''
-      label_plural: ''
-      allow_new: true
-      allow_existing: true
-      match_operator: CONTAINS
-      override_labels: false
-      collapsible: false
-      collapsed: false
-      allow_duplicate: false
+      media_types: {  }
     third_party_settings:
       entity_browser_entity_form:
         entity_browser_id: image_browser
     region: content
   field_metatags:
     weight: 4
-    settings: {  }
+    settings:
+      sidebar: true
     third_party_settings: {  }
     type: metatag_firehose
     region: content
