--- a/config/sync/core.entity_form_display.node.profiles.default.yml
+++ b/config/sync/core.entity_form_display.node.profiles.default.yml
@@ -3,7 +3,6 @@ langcode: en
 status: true
 dependencies:
   config:
-    - core.entity_form_mode.media.background_image
     - field.field.node.profiles.body
     - field.field.node.profiles.field_email
     - field.field.node.profiles.field_first_name
@@ -15,7 +14,7 @@ dependencies:
   module:
     - entity_browser_entity_form
     - field_group
-    - inline_entity_form
+    - media_library
     - telephone
     - text
 third_party_settings:
@@ -94,20 +93,11 @@ content:
   field_profile_image:
     weight: 3
     settings:
-      form_mode: background_image
-      label_singular: ''
-      label_plural: ''
-      allow_new: true
-      allow_existing: true
-      match_operator: CONTAINS
-      override_labels: false
-      collapsible: false
-      collapsed: false
-      allow_duplicate: false
+      media_types: {  }
     third_party_settings:
       entity_browser_entity_form:
         entity_browser_id: image_browser
-    type: inline_entity_form_complex
+    type: media_library_widget
     region: content
   status:
     type: boolean_checkbox
