--- a/config/sync/media.type.remote_video.yml
+++ b/config/sync/media.type.remote_video.yml
@@ -1,12 +1,17 @@
 uuid: ef1a256d-e1c1-42a5-a5a8-2032430a98c9
 langcode: en
 status: true
-dependencies: {  }
+dependencies:
+  module:
+    - crop
+third_party_settings:
+  crop:
+    image_field: null
 id: remote_video
 label: 'Remote Video'
 description: 'Embed remote video from YouTube or Vimeo.'
 source: 'oembed:video'
-queue_thumbnail_downloads: true
+queue_thumbnail_downloads: false
 new_revision: false
 source_configuration:
   thumbnails_directory: 'public://oembed_thumbnails'
