--- a/config/sync/core.entity_form_display.node.blog.default.yml
+++ b/config/sync/core.entity_form_display.node.blog.default.yml
@@ -10,7 +10,6 @@ dependencies:
     - field.field.node.blog.field_tags
     - node.type.blog
   module:
-    - entity_browser_entity_form
     - media_library
     - metatag
     - text
@@ -41,9 +40,7 @@ content:
     weight: 3
     settings:
       media_types: {  }
-    third_party_settings:
-      entity_browser_entity_form:
-        entity_browser_id: image_browser
+    third_party_settings: {  }
     type: media_library_widget
     region: content
   field_metatags:
