--- a/config/sync/core.entity_form_display.node.event.default.yml
+++ b/config/sync/core.entity_form_display.node.event.default.yml
@@ -14,7 +14,6 @@ dependencies:
     - node.type.event
   module:
     - datetime
-    - entity_browser_entity_form
     - field_group
     - geolocation_google_maps
     - inline_entity_form
@@ -68,9 +67,7 @@ content:
       collapsed: false
       allow_duplicate: false
       revision: false
-    third_party_settings:
-      entity_browser_entity_form:
-        entity_browser_id: image_browser
+    third_party_settings: {  }
     type: inline_entity_form_complex
     region: content
   field_category:
