--- a/config/sync/core.entity_form_display.node.profiles.default.yml
+++ b/config/sync/core.entity_form_display.node.profiles.default.yml
@@ -12,7 +12,6 @@ dependencies:
     - field.field.node.profiles.field_profile_image
     - node.type.profiles
   module:
-    - entity_browser_entity_form
     - field_group
     - media_library
     - telephone
@@ -94,9 +93,7 @@ content:
     weight: 3
     settings:
       media_types: {  }
-    third_party_settings:
-      entity_browser_entity_form:
-        entity_browser_id: image_browser
+    third_party_settings: {  }
     type: media_library_widget
     region: content
   status:
