--- a/config/sync/core.entity_form_display.paragraph.gallery.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.gallery.default.yml
@@ -8,7 +8,6 @@ dependencies:
     - field.field.paragraph.gallery.field_widget_title
     - paragraphs.paragraphs_type.gallery
   module:
-    - entity_browser_entity_form
     - media_library
 id: paragraph.gallery.default
 targetEntityType: paragraph
@@ -25,9 +24,7 @@ content:
     weight: 2
     settings:
       media_types: {  }
-    third_party_settings:
-      entity_browser_entity_form:
-        entity_browser_id: image_browser
+    third_party_settings: {  }
     type: media_library_widget
     region: content
   field_widget_title:
