--- a/config/sync/core.entity_form_display.paragraph.image.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.image.default.yml
@@ -9,7 +9,6 @@ dependencies:
     - field.field.paragraph.image.field_widget_title
     - paragraphs.paragraphs_type.image
   module:
-    - entity_browser_entity_form
     - link
     - media_library
 _core:
@@ -23,9 +22,7 @@ content:
     weight: 2
     settings:
       media_types: {  }
-    third_party_settings:
-      entity_browser_entity_form:
-        entity_browser_id: image_browser
+    third_party_settings: {  }
     type: media_library_widget
     region: content
   field_image_size:
