--- a/config/sync/core.entity_form_display.paragraph.video.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.video.default.yml
@@ -7,7 +7,6 @@ dependencies:
     - field.field.paragraph.video.field_widget_title
     - paragraphs.paragraphs_type.video
   module:
-    - entity_browser_entity_form
     - media_library
 _core:
   default_config_hash: LSlAJupZR0XkoEf_46NPM6XipiPmT53RRZYawFD5XUE
@@ -20,9 +19,7 @@ content:
     weight: 2
     settings:
       media_types: {  }
-    third_party_settings:
-      entity_browser_entity_form:
-        entity_browser_id: video_browser
+    third_party_settings: {  }
     type: media_library_widget
     region: content
   field_widget_title:
