--- a/config/sync/core.entity_form_display.user.user.default.yml
+++ b/config/sync/core.entity_form_display.user.user.default.yml
@@ -3,13 +3,12 @@ langcode: en
 status: true
 dependencies:
   config:
-    - core.entity_form_mode.media.background_image
     - field.field.user.user.field_first_name
     - field.field.user.user.field_last_name
     - field.field.user.user.field_user_image
   module:
     - field_group
-    - inline_entity_form
+    - media_library
     - user
 third_party_settings:
   field_group:
@@ -63,19 +62,9 @@ content:
   field_user_image:
     weight: 5
     settings:
-      form_mode: background_image
-      label_singular: ''
-      label_plural: ''
-      allow_new: true
-      allow_existing: true
-      match_operator: CONTAINS
-      override_labels: false
-      collapsible: false
-      collapsed: false
-      allow_duplicate: false
-      revision: false
+      media_types: {  }
     third_party_settings: {  }
-    type: inline_entity_form_complex
+    type: media_library_widget
     region: content
   google_analytics:
     weight: 2
